--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="bottom_nav_selected_tab">#FFFFFF</color>
+    <color name="bottom_nav_other_tabs">#CECECE</color>
+
 </resources>
