--- a/app/src/main/res/layout/recipes_fragment.xml
+++ b/app/src/main/res/layout/recipes_fragment.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.pantry.Pantry">
+    tools:context=".ui.fragments.recipes.Recipes">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pantry"
+        android:text="Recipes"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
